Bug 292505 - Regression: cannot drag and drop on tabs
Summary: Regression: cannot drag and drop on tabs
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-26 19:58 UTC by Todd
Modified: 2012-01-27 21:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Todd 2012-01-26 19:58:23 UTC
Version:           2.0 (using Devel) 
OS:                Linux

Prior to dolphin 2, you could drag and drop files to a tab in Dolphin to move, copy, or link the files to the folder in that tab.  This no longer works with dolphin 2.0.

Reproducible: Always

Steps to Reproduce:
1. Open two tabs in pointing to different folders
2. Drag a file from the file view in the active tab to the inactive tab
3. Drop the file on that tab immediately

Actual Results:  
Nothing happens

Expected Results:  
You get a popup menu with the option to copy, move, or link the file.
Comment 1 Peter Penz 2012-01-27 21:02:11 UTC
Git commit 050480e9a01b3e7ffa1a4d8dbafda22555109a0a by Peter Penz.
Committed on 27/01/2012 at 21:52.
Pushed by ppenz into branch 'master'.

Fix regression: Allow dragging items on a tab
FIXED-IN: 4.8.1

M  +4    -3    dolphin/src/dolphinmainwindow.cpp
M  +6    -11   dolphin/src/views/dolphinview.cpp
M  +1    -12   dolphin/src/views/dolphinview.h

http://commits.kde.org/kde-baseapps/050480e9a01b3e7ffa1a4d8dbafda22555109a0a
Comment 2 Peter Penz 2012-01-27 21:03:05 UTC
Git commit e3fc04a1e4e9b46537f9645dc46f0a971c2457dc by Peter Penz.
Committed on 27/01/2012 at 21:52.
Pushed by ppenz into branch 'KDE/4.8'.

Fix regression: Allow dragging items on a tab
FIXED-IN: 4.8.1

M  +4    -3    dolphin/src/dolphinmainwindow.cpp
M  +6    -11   dolphin/src/views/dolphinview.cpp
M  +1    -12   dolphin/src/views/dolphinview.h

http://commits.kde.org/kde-baseapps/e3fc04a1e4e9b46537f9645dc46f0a971c2457dc