Fix regression: Allow dragging items on a tab

BUG: 292505
FIXED-IN: 4.8.1